test/Fail/Issue2870.err
Issue2870.agda:5.3: error: [ParseError]
Lexical error (unprintable character):
